<resources>
    <string name="app_name">Pie View Sample</string>
    <string name="nav_pie_options">Pie Options</string>
    <string name="nav_legend_options">Legend</string>
    <string name="nav_component_options">Components</string>
    <string name="reset">reset</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="track_options">Track Options</string>
    <string name="pie_options_title">Pie Options</string>
    <string name="component_spacing">Component Spacing</string>
    <string name="starting_angle">Starting Angle</string>
    <string name="stroke_style_title">Stroke End Style</string>
    <string name="rounded">Rounded</string>
    <string name="squared">Squared</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="disable">disable</string>
    <string name="color_help_text">#AARRGGBB | #RRGGBB</string>
    <string name="track_width_label">Width</string>
    <string name="track_alpha_label">Alpha</string>
</resources>